<resources>
    <string name="app_name">Demo</string>
    <string name="splash_msg">Taipei Zoo\nExhibits and Plants</string>
    <string name="splash_loading_read_cache">Loading cache data…</string>
    <string name="splash_loading_cache_fail">Loading cache fail</string>
    <string name="splash_loading_network_data">Loading data from network…</string>
    <string name="splash_loading_network_success">Loading data success</string>
    <string name="splash_loading_cache_success">Loading cache success</string>
    <string name="splash_loading_network_fail">Loading data fail, please check network status…</string>
    <string name="exhibit_list_button_text">Exhibit List</string>
    <string name="plant_list_button_text">Plant List</string>
    <string name="tab_brief">Brief</string>
    <string name="tab_feature">Feature</string>
    <string name="tab_func">Function</string>
    <string name="tab_intro">Introduce</string>
    <string name="tab_intro_message">%1$s %2$s\nEnglish Name:%3$s\nLatin Name:%4$s\nAlso Known:%5$s\nLast Update:%6$s</string>
</resources>
